ON 10TH AFTER TRANSLATION BEFORE CROSS GLOSSARY